<resources>
    <string name="app_name">PathXplorer</string>
    <string name="title_home">PathXplorer</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_psikotes">Psikotes</string>
    <string name="title_consultation">Consultation</string>
    <string name="title_account">Account</string>
    <string name="user_name">User Name</string>
    <string name="psikotes">Psikotes</string>
    <string name="consultant">Konsultan</string>
    <string name="webinar">Webinar</string>
    <string name="campus">Kampus</string>
    <string name="major">Jurusan</string>
    <string name="potential_test">Tes Potensimu Sekarang</string>
    <string name="test_now">Tes Sekarang</string>
    <string name="remind_me_later">Ingatkan Nanti</string>
    <string name="recomended_campus">Rekomendasi Kampus</string>
    <string name="see_all">Lihat Semua</string>
    <string name="webinar_information">Informasi Webinar</string>
    <string name="webinar_image">Webinar Image</string>
    <string name="webinar_date">Senin, 1 Juli 2024</string>
    <string name="title_webinar">Judul Webinar</string>
    <string name="campus_image">Campus Image</string>
    <string name="campus_name">Campus Name</string>
    <string name="campus_location">Campus Location</string>
    <string name="signin_with_google">Masuk dengan Google</string>
    <string name="have_an_account">Sudah punya akun?</string>
    <string name="login_now">Masuk Sekarang</string>
    <string name="signin">Masuk</string>
    <string name="privacy_policy">Saya menyetujui Syarat dan Ketentuan dari PathXplorer</string>
    <string name="insert_password">Masukkan Password</string>
    <string name="password">Password</string>
    <string name="insert_email">Masukkan Email</string>
    <string name="email">Email</string>
    <string name="insert_name">Masukkan Nama</string>
    <string name="name">Name</string>
    <string name="signin_your_account">Daftarkan Akun terlebih dahulu</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="explore_your_potential">Jelajahi Potensi dirimu</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="login">Masuk</string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="signin_now">Daftar Sekarang</string>
    <string name="filter_content">Filter</string>
    <string name="google_icon">google_icon</string>
    <string name="masukkan_email_recovery">Masukkan Email Pemulihan</string>
    <string name="close_button">Close Button</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_content">
        Kebijakan Privasi\n\n

1. Pendahuluan\n
Terima kasih telah menggunakan PathXplorer. Kebijakan privasi ini menjelaskan cara kami mengumpulkan, menggunakan, dan melindungi informasi Anda saat Anda menggunakan aplikasi kami.\n\n

2. Pengumpulan dan Penggunaan Informasi\n
Kami dapat mengumpulkan jenis informasi berikut:\n
- Informasi Pribadi: pathxplorer@gmail.com saat Anda secara sukarela memberikannya kepada kami.\n
- Data Penggunaan: Informasi tentang cara Anda menggunakan aplikasi, seperti interaksi dan pola navigasi.\n\n

3. Cara Kami Menggunakan Informasi Anda\n
Kami menggunakan informasi yang kami kumpulkan untuk berbagai tujuan, termasuk:\n
- Untuk menyediakan dan memelihara aplikasi kami\n
- Untuk meningkatkan pengalaman pengguna\n
- Untuk berkomunikasi dengan Anda tentang pembaruan, promosi, atau dukungan\n\n

4. Berbagi dan Pengungkapan\n
Kami tidak membagikan atau mengungkapkan informasi pribadi Anda kepada pihak ketiga, kecuali sebagaimana diperlukan untuk mematuhi kewajiban hukum atau untuk melindungi hak-hak kami.\n\n

5. Keamanan\n
Kami menghargai kepercayaan Anda dalam memberikan Informasi Pribadi Anda kepada kami. Kami berusaha untuk menggunakan cara yang dapat diterima secara komersial untuk melindunginya. Namun, tidak ada metode transmisi melalui internet atau penyimpanan elektronik yang 100% aman.\n\n

6. Tautan ke Situs Lain\n
Aplikasi kami mungkin berisi tautan ke situs lain. Jika Anda mengeklik tautan pihak ketiga, Anda akan diarahkan ke situs tersebut. Kami sangat menyarankan Anda untuk meninjau Kebijakan Privasi situs web ini, karena kami tidak bertanggung jawab atas praktik mereka.\n\n
7. Perubahan pada Kebijakan Privasi Ini\n
Kami dapat memperbarui Kebijakan Privasi kami dari waktu ke waktu. Kami akan memberi tahu Anda tentang perubahan apa pun dengan mengeposkan Kebijakan Privasi baru di halaman ini.\n\n

8. Hubungi Kami\n
Jika Anda memiliki pertanyaan tentang Kebijakan Privasi kami, silakan hubungi kami di [email/info kontak].\n\n

Dengan menggunakan aplikasi kami, Anda menyetujui ketentuan Kebijakan Privasi ini.
    </string>
    <string name="quiz_rules" translatable="false">
        1. Tes ini terdiri dari 6 bagian, tiap bagian terdiri dari 8 soal. Sehingga total soal yang akan dijawab adalah 48 soal \n\n
        2. Pastikan kamu berada dalam lingkungan yang tenang dan kondusif \n\n
        3. Jawablan setiap Pertanyaan dengan jujur berdasarkan preferensi dan pengalamanmu \n\n
        4. Pertimbangkan baik-baik jawabanmu dan jangan terburu-buru \n\n
        5. Hindari menjawab netral untuk mendapatkan hasil yang optimal \n\n
        6. Ingatlah bahwa tidak ada jawaban yang salah \n\n
        7. Dimohon untuk tidak keluar dari tes ketika sedang mengerjakan, dikarenakan hasil tes tidak akan tersimpan sebelum kamu menyelesaikan tes \n\n
        8. Selamat mengerjakan dan semoga hasilnya dapat membantu kamu mengetahui potensi diri kamu 😁
    </string>
    <string name="send">Kirim</string>
    <string name="article">Artikel</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="hidepass">******</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="or">OR</string>
    <string name="index_question">%1$s / %2$s</string>
    <string name="quiz_guidience">Peraturan Tes</string>
    <string name="start_quiz">Siap, Dimengerti</string>
    <string name="unknown_event">Event information unavailable</string>
    <string name="unknown_owner">Organizer information unavailable</string>
    <string name="unknown_time">Time not specified</string>
    <string name="event_link_not_available">Event link is not available</string>
    <string name="unable_to_open_link">Unable to open link</string>
    <string name="quota_format">Available slots: %d</string>
    <string name="welcome_user">Welcome, %1$s</string>
    <string name="webinar_details">Webinar Details</string>
    <string name="no_webinars_available">No webinars available at the moment</string>
    <string name="error_loading_webinars">Gagal memuat webinar</string>
    <string name="email_not_found">Email tidak ditemukan</string>
    <string name="invalid_otp_length">kode OTP harus berjumlah 6 digit</string>
    <string name="error_title">Error</string>
    <string name="ok">OK</string>
    <string name="otp_verification_success">OTP verification successful</string>
    <string name="otp_verification_failed">OTP verification failed</string>
    <string name="not_found_type_key">Not found type key</string>
    <string name="otp_not_found">OTP not found</string>
    <string name="not_agree">Not Agree</string>
    <string name="agree">Agree</string>
    <string name="indicator_checked">indicator checked</string>
    <string name="question">Question</string>
    <string name="insert_new_password">Silakan masukkan kata sandi baru Anda</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="new_password_confirm">Konfirmasi Kata Sandi</string>
    <string name="change_password">Ganti Kata Sandi</string>
    <string name="email_destination">Masukkan kode OTP yang dikirim pada email %1$s</string>
    <string name="result_description"><strong>What is meanns of your type</strong> \n %1$s</string>
    <string name="result_skill"><strong>Your key skills :</strong> %1$s</string>
    <string name="result_career"><strong>What you can be :</strong> %1$s</string>
    <string name="result_type">Your a \'%1$s\' type of person</string>
    <string name="error_loading_test_results">Error loading test results</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="test_result_detail">Test Result Detail</string>
    <string name="no_data">No Data</string>
    <string name="riasec_type_image">RIASEC Type Image</string>
    <string name="interest_description">Interest Description</string>
    <string name="key_skills">Key Skills</string>
    <string name="example_careers">Example Careers</string>

    <string name="daily_quest_rules">
        1. Daily tes ini mencakup 3 soal\n
        2. Selesaikan daily tes untuk mendapatkan points\n
        3. Daily strikemu tidak akan berkurang walau kamu tidak mengambil tes\n
    </string>
    <string name="daily_quest_greeting">Hi, %1$s</string>
    <string name="fire">fire</string>
    <string name="congratulation_for_your_result">Congratulation for your result</string>
    <string name="back_home">Back home</string>
    <string name="share_result">Share result</string>
    <string name="title_post">Title Post</string>
    <string name="body_post">Body Post</string>
    <string name="riasec_type">RIASEC TYPE</string>
    <string name="owner_email">owner email</string>
    <string name="overview">Overview</string>
    <string name="title">title</string>
    <string name="no_quiz_result">No Quiz Result</string>
    <string name="r1">Menguji kualitas Komponen barang sebelum dikirim.</string>
    <string name="null_resource">-</string>
</resources>