<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pathxplorer.ui.quiz.QuizDashboardFragment"
        android:label="@string/title_psikotes"
        tools:layout="@layout/fragment_quiz_dashboard" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.pathxplorer.ui.main.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pathxplorer.ui.main.HomeFragment"
        android:label="@string/title_home">

        <action
            android:id="@+id/action_navigation_home_to_webinarFragment"
            app:destination="@id/webinarFragment" />
    </fragment>

    <fragment
        android:id="@+id/webinarFragment"
        android:name="com.example.pathxplorer.ui.main.WebinarFragment"
        android:label="WebinarFragment" />
</navigation>